# spelbook

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
e2e_tests/: Cargo.toml
e2e_tests/src/: lib.rs
e2e_tests/tests/: e2e_registry.rs
lez-registry-ffi/: Cargo.toml  flake.nix  result
lez-registry-ffi/include/: lez_registry.h
lez-registry-ffi/src/: lib.rs  registry.rs  registry_idl.json  storage.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/src/: lib.rs
registry_core/: Cargo.toml
registry_core/src/: lib.rs
registry_program/: Cargo.toml
registry_program/src/: lib.rs  register.rs  update.rs
