[workspace]
resolver = "2"
members = ["registry_core", "registry_program", "methods", "methods/guest", "cli", "e2e_tests"]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ['std'] }
risc0-build = "=3.0.5"
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main", features = ["host"] }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
