[workspace]
resolver = "2"
members = ["registry_core", "registry_program", "methods", "methods/guest", "cli", "e2e_tests"]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ['std'] }
risc0-build = "=3.0.5"
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main", features = ["host"] }
nssa-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git", branch = "main" }
nssa-framework-cli = { git = "https://github.com/jimmy-claw/nssa-framework.git", branch = "main" }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
