[workspace]
resolver = "2"
members = ["registry_core", "registry_program", "methods", "methods/guest", "cli", "e2e_tests", "lez-registry-ffi"]

[workspace.dependencies]
risc0-zkvm = { version = "=3.0.5", features = ['std'] }
risc0-build = "=3.0.5"
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "767b5afd388c7981bcdf6f5b5c80159607e07e5b", features = ["host"] }
lez-framework = { git = "https://github.com/jimmy-claw/lez-framework.git", branch = "main" }
lez-cli = { git = "https://github.com/jimmy-claw/lez-framework.git", branch = "main" }
borsh = "1.5.7"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28.2", features = ["net", "rt-multi-thread", "sync", "macros"] }
