[package]
name = "registry-cli"
version = "0.1.0"
edition = "2024"

# CLI binary — uses the nssa-framework generic IDL-driven CLI
[[bin]]
name = "registry"
path = "src/bin/registry.rs"

# IDL generator — reads #[nssa_program] annotations and emits JSON
[[bin]]
name = "generate_idl"
path = "src/bin/generate_idl.rs"

[dependencies]
nssa-framework = { workspace = true }
nssa-framework-cli = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
