[package]
name = "lez-registry-ffi"
version = "0.1.0"
edition = "2021"
description = "C FFI wrapper for lez-registry — enables Logos Core Qt plugin integration"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
registry_core = { path = "../registry_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
base64 = "0.22"
hex = "0.4"

# LEZ deps for transaction building
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main", features = ["host"] }
nssa = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
common = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main" }
borsh = "1.5"
