[package]
name = "registry_program"
version = "0.1.0"
edition = "2024"

[dependencies]
registry_core = { path = "../registry_core" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", branch = "main", features = ["host"] }
nssa-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
borsh = "1.5.7"
risc0-zkvm = { version = "=3.0.5", features = ['std'] }
