[package]
name = "registry_program"
version = "0.1.0"
edition = "2024"

[dependencies]
registry_core = { path = "../registry_core" }
# nssa_core moved to dev-dependencies
lez-framework = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
risc0-zkvm = { workspace = true }
[dev-dependencies]
nssa_core = { workspace = true }
