[package]
name = "registry-guest"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "registry"
path = "src/bin/registry.rs"

[dependencies]
registry_core = { path = "../../registry_core" }
registry_program = { path = "../../registry_program" }
lez-framework = { workspace = true }
nssa_core = { workspace = true, default-features = false, features = [] }
risc0-zkvm = { workspace = true }
borsh = { workspace = true }
